# dark-notify

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml  homebrew.yml
lua/: dark_notify.lua
src/: app.rs  host.h  main.rs  observer.swift
