[package]
name = "dark-notify"
version = "0.1.2"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
libc = "0.2.134"
structopt = "0.3.26"

[build-dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
