[package]
name = "dark-notify"
version = "0.1.2"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
